--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="imagem-principal">
-            <img class="reveal" src="./img/logo.png" alt="Imagem Principal">
+            <img class="reveal" src="./img/frente.jpeg" alt="Imagem Principal">
         </div>
     </div>
     </section>
