--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="galeria">
         
         <div class="imagem-menor reveal">
-            <img class="reveal" src="./img/logo.png" alt="Miniatura 1">
-            <img class="reveal" src="./img/logo.png" alt="Miniatura 2">
+            <img class="reveal" src="./img/cima.jpeg" alt="Miniatura 1">
+            <img class="reveal" src="./img/quadra.jpeg" alt="Miniatura 2">
             <img class="reveal" src="./img/logo.png" alt="Miniatura 3">
             <img class="reveal" src="./img/logo.png" alt="Miniatura 4">
         </div>
