--- a/funcao.html
+++ b/funcao.html
@@ -17,6 +17,10 @@
         </div>
 
         <div class="opcao">
+            <a href="./login.html"><img src="./img/prof.png" alt=""></a>
+        </div>
+
+        <div class="opcao">
             <a href="./login.html"><img src="./img/admin.png" alt=""></a>
         </div>
     </div>
