--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Conheça a nossa escola</h2>
 
         <div class="container">
-            <p>Bem-vindo ao Colégio Estadual Alberto Gomes Veiga</p>
+            <p>Bem-vindo ao Colégio Estadual Alberto Gomes Veiga!</p>
             <p></p>
         </div>
     </section>
@@ -35,8 +35,8 @@
         <div class="imagem-menor reveal">
             <img class="reveal" src="./img/cima.jpeg" alt="Miniatura 1">
             <img class="reveal" src="./img/quadra.jpeg" alt="Miniatura 2">
-            <img class="reveal" src="./img/logo.png" alt="Miniatura 3">
-            <img class="reveal" src="./img/logo.png" alt="Miniatura 4">
+            <img class="reveal" src="./img/cima.jpeg" alt="Miniatura 3">
+            <img class="reveal" src="./img/quadra.jpeg" alt="Miniatura 4">
         </div>
 
         <div class="imagem-principal">
