--- a/teste-Gabriel/admin.html
+++ b/teste-Gabriel/admin.html
@@ -34,7 +34,7 @@
                 <h3>Editar Horários</h3>
                 
                 <div class="form-group">
-                    <label for="admin-periodo">Período:</label>
+                    <label for="admin-periodo">Turma:</label>
                     <select id="admin-periodo">
                         <option value="manha">Manhã</option>
                         <option value="tarde">Tarde</option>
