--- a/index.html
+++ b/index.html
@@ -339,21 +339,21 @@
             <div class="team-member">
                 <img src="./img/tirza.jpg" alt="Diretor Geral">
                 <div class="team-member-info">
-                    <h3>Tirza</h3>
+                    <h3>Tirza Cunha</h3>
                     <p>Diretora Geral</p>
                 </div>
             </div>
             <div class="team-member">
                 <img src="diretor-pedagogico.jpg" alt="Diretor Pedagógico">
                 <div class="team-member-info">
-                    <h3>Adriana</h3>
+                    <h3>Adriana Adriano</h3>
                     <p>Diretora</p>
                 </div>
             </div>
             <div class="team-member">
                 <img src="diretor-administrativo.jpg" alt="Diretor Administrativo">
                 <div class="team-member-info">
-                    <h3>Vitor</h3>
+                    <h3>Vitor Roberto</h3>
                     <p>Diretor </p>
                 </div>
             </div>
