--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colégio Técnico Excelência</title>
+    <title>AGV</title>
     <style>
         * {
             margin: 0;
@@ -344,14 +344,14 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="diretor-pedagogico.jpg" alt="Diretor Pedagógico">
+                <img src="./img/adriana.jpg" alt="Diretor Pedagógico">
                 <div class="team-member-info">
                     <h3>Adriana Adriano</h3>
                     <p>Diretora</p>
                 </div>
             </div>
             <div class="team-member">
-                <img src="diretor-administrativo.jpg" alt="Diretor Administrativo">
+                <img src="./img/vitor.jpeg" alt="Diretor Administrativo">
                 <div class="team-member-info">
                     <h3>Vitor Roberto</h3>
                     <p>Diretor </p>
@@ -396,4 +396,5 @@
     </footer>
 
 </body>
+
 </html>
