--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="./img/adriana.jpg" alt="Diretor Pedagógico">
+                <img src="./img/adriana.jpeg" alt="Diretor Pedagógico">
                 <div class="team-member-info">
                     <h3>Adriana Adriano</h3>
                     <p>Diretora</p>
@@ -374,7 +374,7 @@
             </div>
             <div class="gallery-item">
                 <img src="./img/quadra.jpeg" alt="Quadra">
-                <p>Quadra de Vôlei</p>
+                <p>Quadra de Basquete</p>
             </div>
             <div class="gallery-item">
                 <img src="./img/cima.jpeg" alt="Vista de Cima">
@@ -398,3 +398,4 @@
 </body>
 
 </html>
+
