--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="./img/adriana.jpeg" alt="Diretor Pedagógico">
+                <img src="./img/tirza.jpg" alt="Diretor Pedagógico">
                 <div class="team-member-info">
                     <h3>Adriana Adriano</h3>
                     <p>Diretora</p>
@@ -398,4 +398,5 @@
 </body>
 
 </html>
+
 
