--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="./img/adriana.jpeg" alt="Diretor Pedagógico">
+                <img src="diretor-pedagogico.jpg" alt="Diretor Pedagógico">
                 <div class="team-member-info">
                     <h3>Adriana Adriano</h3>
                     <p>Diretora</p>
                 </div>
             </div>
             <div class="team-member">
-                <img src="./img/vitor.jpeg" alt="Diretor Administrativo">
+                <img src="diretor-administrativo.jpg" alt="Diretor Administrativo">
                 <div class="team-member-info">
                     <h3>Vitor Roberto</h3>
                     <p>Diretor </p>
@@ -374,7 +374,7 @@
             </div>
             <div class="gallery-item">
                 <img src="./img/quadra.jpeg" alt="Quadra">
-                <p>Quadra de Basquete</p>
+                <p>Quadra de Vôlei</p>
             </div>
             <div class="gallery-item">
                 <img src="./img/cima.jpeg" alt="Vista de Cima">
@@ -396,8 +396,4 @@
     </footer>
 
 </body>
-
 </html>
-
-
-
