--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel Administrativo</title>
+    <title>Área do Administrador</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/admin.css">
 </head>
@@ -89,6 +89,6 @@
         </section>
     </main>
 
-    <script src="js/admin.js"></script>
+    <script src="./js/admin.js"></script>
 </body>
 </html>
