--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </div>
 
         <nav>
-            <a href="login.html">Área de Login</a>
+            <a href="./funcao.html">Área de Login</a>
         </nav>
     </header>
     
@@ -398,6 +398,7 @@
 </body>
 
 </html>
+
 
 
 
